--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>http://wbotelhos.com/Criando Templates SASS Com Function Nth e Index</title>
+  <title>http://wbotelhos.com/criando-templates-sass-com-function-nth-e-index</title>
 
   <%= stylesheet_link_tag 'application', media: 'all' %>
 </head>
