--- a/app/assets/stylesheets/normal.css.sass
+++ b/app/assets/stylesheets/normal.css.sass
@@ -8,14 +8,14 @@
 
   .linkedin
     background-color: #1B86BC
-    color: #FFF
+    color: #CCC
     height: 40px
     padding-top: 20px
     text-align: center
 
   .twitter
     background-color: #00ABF0
-    color: #FFF
+    color: #DDD
     height: 40px
     padding-top: 20px
     text-align: center
