--- a/app/assets/stylesheets/each-nth.css.sass
+++ b/app/assets/stylesheets/each-nth.css.sass
@@ -1,20 +1,17 @@
-$default_height: 40px
-$default_padding-top: 20px
-$default_text-align: center
+$default-height: 40px
+$default-padding-top: 20px
+$default-text-align: center
 
-$default_background-color: #000
-$default_color: #FFF
+$github-background-color: #333
+$github-color: #FFF
 
-$github_background-color: #333
-$github_color: #F1F1F1
+$linkedin-background-color: #1B86BC
+$linkedin-color: #EEE
 
-$linkedin_background-color: #1B86BC
-$linkedin_color: #F2F2F2
+$twitter-background-color: #00ABF0
+$twitter-color: #DDD
 
-$twitter_background-color: #00ABF0
-$twitter_color: #F3F3F3
-
-$skins: default $default_background-color $default_color, github $github_background-color $github_color, linkedin $linkedin_background-color $linkedin_color, twitter $twitter_background-color $twitter_color
+$skins: github $github-background-color $github-color, linkedin $linkedin-background-color $linkedin-color, twitter $twitter-background-color $twitter-color
 
 .each-nth
   @each $skin in $skins
@@ -24,6 +21,6 @@ $skins: default $default_background-color $default_color, github $github_backgro
       background-color: nth($skin, 2)
       // abstract the property three that I have to know the right position
       color: nth($skin, 3)
-      height: $default_height
-      padding-top: $default_padding-top
-      text-align: $default_text-align
+      height: $default-height
+      padding-top: $default-padding-top
+      text-align: $default-text-align
